[gd_scene format=3 uid="uid://62vvv8x8t7nm"]

[ext_resource type="Texture2D" uid="uid://uy8oihb6pd4m" path="res://assets/menus/character_select/stage/bg.png" id="1_oablf"]
[ext_resource type="Script" uid="uid://p52omju8wqak" path="res://scenes/menus/character_select.gd" id="1_tjis5"]
[ext_resource type="Script" uid="uid://djsxumpddydxq" path="res://scripts/autoload/conductor.gd" id="2_7dv0l"]
[ext_resource type="Script" uid="uid://diqmdngjb60u2" path="res://addons/gdanimate/animate_symbol.gd" id="2_rptr7"]
[ext_resource type="AudioStream" uid="uid://dagd7ek6gmogr" path="res://assets/menus/character_select/scroll.ogg" id="2_twrlh"]
[ext_resource type="AudioStream" uid="uid://b41lp4n5nd3dk" path="res://assets/menus/character_select/confirm.ogg" id="3_0awtx"]
[ext_resource type="AudioStream" uid="uid://b234a5vj6k6" path="res://assets/menus/character_select/character_select.ogg" id="3_4fbts"]
[ext_resource type="AudioStream" uid="uid://6wvkbito7xw2" path="res://assets/menus/character_select/cancel.ogg" id="4_1u4p0"]
[ext_resource type="Script" uid="uid://xcwf8fppek0h" path="res://scripts/animated_sprite.gd" id="4_xae3q"]
[ext_resource type="Texture2D" uid="uid://cavibbv2delc2" path="res://assets/menus/character_select/stage/curtains.png" id="5_xae3q"]
[ext_resource type="Texture2D" uid="uid://dkhehc56csbb2" path="res://assets/menus/character_select/stage/character_light.png" id="6_u125y"]
[ext_resource type="SpriteFrames" uid="uid://chgxlx7kxse4l" path="res://assets/menus/character_select/stage/stage.res" id="7_5ydai"]
[ext_resource type="PackedScene" uid="uid://dh0j85o8ohuon" path="res://scenes/menus/character_select/gf.tscn" id="7_jblrn"]
[ext_resource type="PackedScene" uid="uid://d3uuros7qs2p" path="res://scenes/menus/character_select/bf.tscn" id="8_okqu4"]
[ext_resource type="Texture2D" uid="uid://4gefr8chrmni" path="res://assets/menus/character_select/stage/fg_blur.png" id="9_okqu4"]
[ext_resource type="Shader" uid="uid://boal0d6xvnwul" path="res://assets/shaders/flixel_multiply.gdshader" id="9_sf7fi"]
[ext_resource type="Texture2D" uid="uid://dshobl0rx8nhg" path="res://assets/menus/character_select/stage/choose_dark.png" id="12_rgimu"]
[ext_resource type="Texture2D" uid="uid://c7u4qpyu0eogq" path="res://assets/menus/character_select/stage/choose_dipshit.png" id="13_3wfvo"]
[ext_resource type="Shader" uid="uid://ctlwv54e12i3j" path="res://assets/shaders/mosaic_shader.gdshader" id="15_cggar"]
[ext_resource type="Texture2D" uid="uid://86qag6byq5lj" path="res://assets/menus/character_select/bf/title.png" id="16_3ax17"]
[ext_resource type="Shader" uid="uid://bgwusoh6kicj3" path="res://assets/shaders/adjust_hsv.gdshader" id="16_tshbu"]
[ext_resource type="SpriteFrames" uid="uid://cdi8k0pr0dogl" path="res://assets/menus/character_select/stage/choose_blur.res" id="16_twrlh"]
[ext_resource type="SpriteFrames" uid="uid://d0o5ptiv2s303" path="res://assets/menus/character_select/stage/choose_backing.res" id="17_0awtx"]
[ext_resource type="Texture2D" uid="uid://cbiuoskvar8so" path="res://assets/menus/character_select/locked/icon.png" id="17_v1oy0"]
[ext_resource type="SpriteFrames" uid="uid://dpxaafxrxp5ym" path="res://assets/menus/character_select/pico/icon.res" id="18_q65u0"]
[ext_resource type="Material" uid="uid://h6uy4lto3tyx" path="res://assets/shaders/additive.tres" id="20_8pn6j"]
[ext_resource type="Texture2D" uid="uid://rhym0vi414ug" path="res://assets/menus/character_select/selector/selector.png" id="21_pwyd4"]
[ext_resource type="Script" uid="uid://crsaxs3qogjfq" path="res://scenes/menus/character_select/follower.gd" id="22_pwyd4"]
[ext_resource type="SpriteFrames" uid="uid://bhrbjrxy56cpw" path="res://assets/menus/character_select/bf/icon.res" id="22_twrlh"]
[ext_resource type="SpriteFrames" uid="uid://cxstgenxhhdxm" path="res://assets/menus/character_select/selector/selector.tres" id="26_twrlh"]
[ext_resource type="Script" uid="uid://dn2m283whavha" path="res://scenes/menus/character_select/camera_2d.gd" id="31_4fbts"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xae3q"]
blend_mode = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wrayq"]
shader = ExtResource("9_sf7fi")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_cggar"]
blend_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q65u0"]
shader = ExtResource("16_tshbu")
shader_parameter/hue = 0.0
shader_parameter/saturation = 0.0
shader_parameter/contrast = 0.0
shader_parameter/brightness = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_sayuy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_v1oy0")
}],
"loop": false,
"name": &"lock",
"speed": 24.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_apdom"]
shader = ExtResource("16_tshbu")
shader_parameter/hue = 15.0
shader_parameter/saturation = 0.0
shader_parameter/contrast = 0.0
shader_parameter/brightness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8pn6j"]
shader = ExtResource("16_tshbu")
shader_parameter/hue = 30.0
shader_parameter/saturation = 0.0
shader_parameter/contrast = 0.0
shader_parameter/brightness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pwyd4"]
shader = ExtResource("16_tshbu")
shader_parameter/hue = 60.0
shader_parameter/saturation = 0.0
shader_parameter/contrast = 0.0
shader_parameter/brightness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ptoq"]
shader = ExtResource("16_tshbu")
shader_parameter/hue = 60.0
shader_parameter/saturation = 0.0
shader_parameter/contrast = 0.0
shader_parameter/brightness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ydai"]
shader = ExtResource("16_tshbu")
shader_parameter/hue = 75.0
shader_parameter/saturation = 0.0
shader_parameter/contrast = 0.0
shader_parameter/brightness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_twrlh"]
shader = ExtResource("16_tshbu")
shader_parameter/hue = 90.0
shader_parameter/saturation = 0.0
shader_parameter/contrast = 0.0
shader_parameter/brightness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5akvo"]
shader = ExtResource("15_cggar")
shader_parameter/block_size = Vector2(1, 1)

[node name="character_select" type="Node2D" unique_id=1836175676]
script = ExtResource("1_tjis5")

[node name="conductor" type="Node" parent="." unique_id=400995873]
unique_name_in_owner = true
script = ExtResource("2_7dv0l")
metadata/_custom_type_script = "uid://djsxumpddydxq"

[node name="music" type="AudioStreamPlayer" parent="." unique_id=1334339865]
unique_name_in_owner = true
stream = ExtResource("3_4fbts")
bus = &"Music"

[node name="select" type="AudioStreamPlayer" parent="." unique_id=1786441825]
unique_name_in_owner = true
stream = ExtResource("2_twrlh")
max_polyphony = 2

[node name="confirm" type="AudioStreamPlayer" parent="." unique_id=1174258553]
unique_name_in_owner = true
stream = ExtResource("3_0awtx")

[node name="deny" type="AudioStreamPlayer" parent="." unique_id=1690688925]
unique_name_in_owner = true
stream = ExtResource("4_1u4p0")

[node name="bg" type="Parallax2D" parent="." unique_id=1868511915]
scroll_scale = Vector2(0.1, 0.1)

[node name="sprite" type="Sprite2D" parent="bg" unique_id=2010011887]
position = Vector2(633.5, 204)
texture = ExtResource("1_oablf")

[node name="crowd" type="Parallax2D" parent="." unique_id=282921937]
scroll_scale = Vector2(0.3, 0.3)

[node name="sprite" type="Node2D" parent="crowd" unique_id=192690567]
position = Vector2(-75, 209)
script = ExtResource("2_rptr7")
atlas = "res://assets/menus/character_select/stage/crowd"
frame = 8
playing = true
metadata/_custom_type_script = "uid://diqmdngjb60u2"

[node name="select_stage" type="AnimatedSprite2D" parent="." unique_id=488027129]
position = Vector2(-40, 391)
sprite_frames = ExtResource("7_5ydai")
animation = &"stage full instance 1"
frame_progress = 0.06285247
centered = false
script = ExtResource("4_xae3q")
playing = true
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="curtains" type="Parallax2D" parent="." unique_id=1077082251]
scroll_scale = Vector2(1.4, 1.4)

[node name="sprite" type="Sprite2D" parent="curtains" unique_id=1651862986]
position = Vector2(-47, -49)
texture = ExtResource("5_xae3q")
centered = false

[node name="bar" type="Parallax2D" parent="." unique_id=908010566]
scroll_scale = Vector2(0, 0.7)

[node name="sprite" type="Node2D" parent="bar" unique_id=1814565018]
material = SubResource("CanvasItemMaterial_xae3q")
position = Vector2(0, 55)
script = ExtResource("2_rptr7")
atlas = "res://assets/menus/character_select/stage/bar"
frame = 2
playing = true
metadata/_custom_type_script = "uid://diqmdngjb60u2"

[node name="player_light" type="Sprite2D" parent="." unique_id=394656920]
position = Vector2(800, 250)
texture = ExtResource("6_u125y")
centered = false

[node name="spectator_light" type="Sprite2D" parent="." unique_id=170358364]
position = Vector2(180, 240)
texture = ExtResource("6_u125y")
centered = false

[node name="atlas_characters" type="Node2D" parent="." unique_id=153096142]
unique_name_in_owner = true

[node name="spectator" parent="atlas_characters" unique_id=87052843 instance=ExtResource("7_jblrn")]
unique_name_in_owner = true

[node name="player" parent="atlas_characters" unique_id=1201775806 instance=ExtResource("8_okqu4")]
unique_name_in_owner = true

[node name="speakers" type="Parallax2D" parent="." unique_id=862958292]
scroll_scale = Vector2(1.8, 1.8)

[node name="sprite" type="Node2D" parent="speakers" unique_id=969833391]
position = Vector2(-73, 421)
script = ExtResource("2_rptr7")
atlas = "res://assets/menus/character_select/stage/speakers"
loop_mode = "Play Once"
metadata/_custom_type_script = "uid://diqmdngjb60u2"

[node name="foreground_blur" type="Sprite2D" parent="." unique_id=1998309422]
material = SubResource("ShaderMaterial_wrayq")
position = Vector2(-125, 170)
texture = ExtResource("9_okqu4")
centered = false

[node name="character_selector" type="Node2D" parent="." unique_id=700638000]
unique_name_in_owner = true
position = Vector2(640, 0)

[node name="dipshit_back" type="Sprite2D" parent="character_selector" unique_id=1947203500]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(-3, 296)
texture = ExtResource("12_rgimu")

[node name="dipshit_blur" type="AnimatedSprite2D" parent="character_selector" unique_id=603914883]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_cggar")
position = Vector2(-208, -65)
sprite_frames = ExtResource("16_twrlh")
animation = &"CHOOSE vertical offset instance 1"
autoplay = "CHOOSE vertical offset instance 1"
centered = false
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="dipshit_backing" type="AnimatedSprite2D" parent="character_selector" unique_id=414269233]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_cggar")
position = Vector2(-204, -17)
sprite_frames = ExtResource("17_0awtx")
animation = &"CHOOSE horizontal offset instance 1"
autoplay = "CHOOSE horizontal offset instance 1"
centered = false
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="choose_dipshit" type="Sprite2D" parent="character_selector" unique_id=1883424809]
unique_name_in_owner = true
position = Vector2(-201, -13)
texture = ExtResource("13_3wfvo")
centered = false

[node name="characters" type="Node2D" parent="character_selector" unique_id=1414144150]
unique_name_in_owner = true

[node name="1" type="AnimatedSprite2D" parent="character_selector/characters" unique_id=1598004148]
material = SubResource("ShaderMaterial_q65u0")
position = Vector2(-120.5, 198)
sprite_frames = SubResource("SpriteFrames_sayuy")
animation = &"lock"
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="2" type="AnimatedSprite2D" parent="character_selector/characters" unique_id=1870947418]
material = SubResource("ShaderMaterial_apdom")
position = Vector2(-11.5, 198)
sprite_frames = SubResource("SpriteFrames_sayuy")
animation = &"lock"
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="3" type="AnimatedSprite2D" parent="character_selector/characters" unique_id=1030401433]
material = SubResource("ShaderMaterial_8pn6j")
position = Vector2(108.5, 198)
sprite_frames = SubResource("SpriteFrames_sayuy")
animation = &"lock"
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="4" type="AnimatedSprite2D" parent="character_selector/characters" unique_id=742736969]
editor_description = "pico"
position = Vector2(-108.5, 322)
sprite_frames = ExtResource("18_q65u0")
animation = &"PICO ICON"
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="5" type="AnimatedSprite2D" parent="character_selector/characters" unique_id=1643131191]
editor_description = "bf"
position = Vector2(0, 322)
sprite_frames = ExtResource("22_twrlh")
animation = &"BF ICON"
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="6" type="AnimatedSprite2D" parent="character_selector/characters" unique_id=1787080575]
material = SubResource("ShaderMaterial_pwyd4")
position = Vector2(108.5, 321)
sprite_frames = SubResource("SpriteFrames_sayuy")
animation = &"lock"
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="7" type="AnimatedSprite2D" parent="character_selector/characters" unique_id=1816187321]
material = SubResource("ShaderMaterial_7ptoq")
position = Vector2(-114.5, 428)
sprite_frames = SubResource("SpriteFrames_sayuy")
animation = &"lock"
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="8" type="AnimatedSprite2D" parent="character_selector/characters" unique_id=668129910]
material = SubResource("ShaderMaterial_5ydai")
position = Vector2(-3.5, 428)
sprite_frames = SubResource("SpriteFrames_sayuy")
animation = &"lock"
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="9" type="AnimatedSprite2D" parent="character_selector/characters" unique_id=559906107]
material = SubResource("ShaderMaterial_twrlh")
position = Vector2(114.5, 428)
sprite_frames = SubResource("SpriteFrames_sayuy")
animation = &"lock"
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="selector_far_back" type="Sprite2D" parent="character_selector" unique_id=849339914 node_paths=PackedStringArray("target")]
modulate = Color(0.235294, 0.454902, 0.968627, 1)
material = ExtResource("20_8pn6j")
position = Vector2(-2, 323)
texture = ExtResource("21_pwyd4")
script = ExtResource("22_pwyd4")
target = NodePath("../selector")
speed = 16.0

[node name="selector_back" type="Sprite2D" parent="character_selector" unique_id=1422033655 node_paths=PackedStringArray("target")]
modulate = Color(0.243137, 0.733333, 1, 1)
material = ExtResource("20_8pn6j")
position = Vector2(-2, 323)
texture = ExtResource("21_pwyd4")
script = ExtResource("22_pwyd4")
target = NodePath("../selector")
speed = 20.0

[node name="selector" type="AnimatedSprite2D" parent="character_selector" unique_id=723663316]
unique_name_in_owner = true
position = Vector2(-2, 323)
sprite_frames = ExtResource("26_twrlh")
animation = &"idle"
script = ExtResource("4_xae3q")
metadata/_custom_type_script = "uid://xcwf8fppek0h"

[node name="title" type="Sprite2D" parent="." unique_id=283159390]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_5akvo")
position = Vector2(1008, 100)
scale = Vector2(0.77, 0.77)
texture = ExtResource("16_3ax17")

[node name="camera_2d" type="Camera2D" parent="." unique_id=472909301]
unique_name_in_owner = true
position = Vector2(640, 360)
limit_left = -100
limit_top = -100
limit_right = 1380
limit_bottom = 720
position_smoothing_enabled = true
script = ExtResource("31_4fbts")

[node name="fade_rect" type="ColorRect" parent="." unique_id=351425751]
unique_name_in_owner = true
offset_left = -217.0
offset_top = -232.0
offset_right = 1554.0
offset_bottom = 937.0
mouse_filter = 2
color = Color(0, 0, 0, 0)
metadata/_edit_lock_ = true
